[package]
name = "Amount-Watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serde_json = "1.0.1"
serde = { version = "1.0.209", features = ["derive"] }
reqwest = {version = "0.12.7", features = ["json"]}
serenity = "0.12.2"
tokio = { version = "1.4.0", features = ["rt",  "rt-multi-thread" ,"macros"] }
toml = "0.8.19"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
alloy = { version = "0.3.0", features = ["full"] }

